--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: "Estelle D."
 description: "Software Engineer"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/avatar.png
+avatar: /images/IMG_2755.jpeg
 
 #
 # Flags below are optional
